--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.80",
+    "@supabase/supabase-js": "^2.87.1",
+    "canvas-confetti": "^1.9.4",
     "fuse.js": "^7.1.0",
     "i18next": "^25.7.2",
     "i18next-browser-languagedetector": "^8.2.0",
