--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.0",
     "react-router-dom": "^7.10.1",
+    "react-zoom-pan-pinch": "^3.7.0",
     "vosk-browser": "^0.0.8"
   },
   "devDependencies": {
